<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/g1" android:checkableBehavior="single" >
        <item android:title="Profile"
            android:icon="@drawable/profile"
            android:id="@+id/profile"/>
        <item android:title="Home" android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            />

        <item android:title="Add Post"
            android:id="@+id/add"
            android:icon="@drawable/ic_baseline_add_circle_24"/>
        <item android:title="People"
            android:icon="@drawable/ic_baseline_person_pin_circle_24"
            android:id="@+id/order"/>

        <item android:title="Friend Request"
            android:icon="@drawable/ic_baseline_person_pin_circle_24"
            android:id="@+id/request"/>

        <item android:title="Products"
            android:icon="@drawable/ic_baseline_shop_24"
            android:id="@+id/admin">

        </item>
        <item android:title="WishList"
            android:icon="@drawable/ic_baseline_shop_24"
            android:id="@+id/wish">

        </item>

        <item android:title="Chat"
            android:id="@+id/chat"
            android:icon="@drawable/ic_baseline_chat_24"
            />
        <item android:title="Transactions"
            android:id="@+id/transaction"
            android:icon="@drawable/ic_baseline_chat_24"
            />
        <item android:title="Logout"
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>
    </group>


</menu>