<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Home">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp">
        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/carousel"
            app:carouselType="SHOWCASE"
            app:scaleOnScroll="true"
            app:carouselGravity="CENTER"
            />
    </androidx.cardview.widget.CardView>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/rv"/>

</LinearLayout>