...
        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/carousel">

            <CheckBox
                android:id="@+id/like"
                android:layout_width="46dp"
                android:layout_height="47dp"
                android:layout_gravity="end"
                android:background="@drawable/heart"
                android:button="@null"
                android:buttonTint="@android:color/transparent"
...
