<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#E6E5E5"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        app:cardElevation="@dimen/cardview_compat_inset_shadow"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/phone"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"
                android:background="@color/white"
                android:hint="PhoneNumber "
                android:padding="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/question"
                android:text="What is aosidjaosdiaoisdjoasi"
                android:textStyle="bold"
                android:fontFamily="@font/main_font"/>

            <EditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:hint="Answer "
                android:padding="10dp" />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:hint="Password "
                android:padding="10dp" />
            <EditText
                android:id="@+id/cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="Cpassowrd "
                android:padding="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:text="Next"
                android:id="@+id/next"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>